Change socket endpoint, fix app header alignment

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,9 @@ body,
   font-weight: 500;
   padding: 10px;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .app-container {
